@startuml

title __DOMAIN's Class Diagram__\n

  namespace com.vrush.microservices.searching {
    namespace specifications {
      namespace domain {
        class com.vrush.microservices.searching.specifications.domain.FieldIn {
            - attributeName : String
            - fieldList : String
            + FieldIn()
            + getAttributeName()
            + getFieldList()
        }
      }
    }
  }
  

  namespace com.vrush.microservices.searching {
    namespace specifications {
      namespace domain {
        class com.vrush.microservices.searching.specifications.domain.SpecificationFilter {
            - field : String
            - value : Object
            + SpecificationFilter()
            + SpecificationFilter()
            + getField()
            + getFieldIn()
            + getOperation()
            + getValue()
        }
      }
    }
  }
  

  com.vrush.microservices.searching.specifications.domain.SpecificationFilter o-- com.vrush.microservices.searching.specifications.domain.FieldIn : fieldIn
  com.vrush.microservices.searching.specifications.domain.SpecificationFilter o-- com.vrush.microservices.searching.specifications.enums.SpecificationOperationEnum : operation


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
